add example for Harp solution to synchronize setup #4

--- a/VrArena/bonsai/Bonsai.config
+++ b/VrArena/bonsai/Bonsai.config
@@ -14,6 +14,9 @@
     <Package id="Bonsai.Editor" version="2.7.2" />
     <Package id="Bonsai.Ephys" version="2.5.0" />
     <Package id="Bonsai.Ephys.Design" version="2.5.0" />
+    <Package id="Bonsai.Harp" version="3.4.0" />
+    <Package id="Bonsai.Harp.CF" version="1.6.0" />
+    <Package id="Bonsai.Harp.Design" version="3.4.0" />
     <Package id="Bonsai.Numerics" version="0.7.0" />
     <Package id="Bonsai.Player" version="2.7.1" />
     <Package id="Bonsai.PulsePal" version="0.1.0" />
@@ -62,6 +65,9 @@
     <AssemblyReference assemblyName="Bonsai.Editor" />
     <AssemblyReference assemblyName="Bonsai.Ephys" />
     <AssemblyReference assemblyName="Bonsai.Ephys.Design" />
+    <AssemblyReference assemblyName="Bonsai.Harp" />
+    <AssemblyReference assemblyName="Bonsai.Harp.CF" />
+    <AssemblyReference assemblyName="Bonsai.Harp.Design" />
     <AssemblyReference assemblyName="Bonsai.Numerics" />
     <AssemblyReference assemblyName="Bonsai.Player" />
     <AssemblyReference assemblyName="Bonsai.PulsePal" />
@@ -97,6 +103,9 @@
     <AssemblyLocation assemblyName="Bonsai.Editor" processorArchitecture="MSIL" location="Packages\Bonsai.Editor.2.7.2\lib\net472\Bonsai.Editor.dll" />
     <AssemblyLocation assemblyName="Bonsai.Ephys" processorArchitecture="MSIL" location="Packages\Bonsai.Ephys.2.5.0\lib\net472\Bonsai.Ephys.dll" />
     <AssemblyLocation assemblyName="Bonsai.Ephys.Design" processorArchitecture="MSIL" location="Packages\Bonsai.Ephys.Design.2.5.0\lib\net472\Bonsai.Ephys.Design.dll" />
+    <AssemblyLocation assemblyName="Bonsai.Harp" processorArchitecture="MSIL" location="Packages\Bonsai.Harp.3.4.0\lib\net462\Bonsai.Harp.dll" />
+    <AssemblyLocation assemblyName="Bonsai.Harp.CF" processorArchitecture="MSIL" location="Packages\Bonsai.Harp.CF.1.6.0\lib\net45\Bonsai.Harp.CF.dll" />
+    <AssemblyLocation assemblyName="Bonsai.Harp.Design" processorArchitecture="MSIL" location="Packages\Bonsai.Harp.Design.3.4.0\lib\net462\Bonsai.Harp.Design.dll" />
     <AssemblyLocation assemblyName="Bonsai.Numerics" processorArchitecture="MSIL" location="Packages\Bonsai.Numerics.0.7.0\lib\net462\Bonsai.Numerics.dll" />
     <AssemblyLocation assemblyName="Bonsai.Player" processorArchitecture="MSIL" location="Packages\Bonsai.Player.2.7.1\lib\net472\Bonsai.Player.exe" />
     <AssemblyLocation assemblyName="Bonsai.PulsePal" processorArchitecture="MSIL" location="Packages\Bonsai.PulsePal.0.1.0\lib\net45\Bonsai.PulsePal.dll" />
