add adaptation of the DemoWorkflow being implemented in the setup
- Added Ueye package to bonsai
- Added the actual low resolution camera feed to the tracker in bonsai
- changed background subtraction from absolute to dark
- Added empirical thresholds for maximum object area and for Background subtraction binarization

--- a/VrArena/bonsai/Bonsai.config
+++ b/VrArena/bonsai/Bonsai.config
@@ -30,6 +30,7 @@
     <Package id="Bonsai.Shaders.Rendering" version="0.3.1" />
     <Package id="Bonsai.System" version="2.7.0" />
     <Package id="Bonsai.System.Design" version="2.7.0" />
+    <Package id="Bonsai.uEye" version="2.1.1" />
     <Package id="Bonsai.Video" version="2.4.0" />
     <Package id="Bonsai.Video.Design" version="2.4.0" />
     <Package id="Bonsai.Vision" version="2.7.0" />
@@ -81,6 +82,7 @@
     <AssemblyReference assemblyName="Bonsai.Shaders.Rendering" />
     <AssemblyReference assemblyName="Bonsai.System" />
     <AssemblyReference assemblyName="Bonsai.System.Design" />
+    <AssemblyReference assemblyName="Bonsai.uEye" />
     <AssemblyReference assemblyName="Bonsai.Video" />
     <AssemblyReference assemblyName="Bonsai.Video.Design" />
     <AssemblyReference assemblyName="Bonsai.Vision" />
@@ -88,6 +90,7 @@
     <AssemblyReference assemblyName="Bonsai.VR" />
     <AssemblyReference assemblyName="Bonsai.Windows.Input" />
     <AssemblyReference assemblyName="BonVision" />
+    <AssemblyReference assemblyName="uEyeDotNet" />
   </AssemblyReferences>
   <AssemblyLocations>
     <AssemblyLocation assemblyName="AForge" processorArchitecture="MSIL" location="Packages\AForge.2.2.5\lib\AForge.dll" />
@@ -119,6 +122,7 @@
     <AssemblyLocation assemblyName="Bonsai.Shaders.Rendering" processorArchitecture="MSIL" location="Packages\Bonsai.Shaders.Rendering.0.3.1\lib\net462\Bonsai.Shaders.Rendering.dll" />
     <AssemblyLocation assemblyName="Bonsai.System" processorArchitecture="MSIL" location="Packages\Bonsai.System.2.7.0\lib\net462\Bonsai.System.dll" />
     <AssemblyLocation assemblyName="Bonsai.System.Design" processorArchitecture="MSIL" location="Packages\Bonsai.System.Design.2.7.0\lib\net462\Bonsai.System.Design.dll" />
+    <AssemblyLocation assemblyName="Bonsai.uEye" processorArchitecture="MSIL" location="Packages\Bonsai.uEye.2.1.1\lib\net45\Bonsai.uEye.dll" />
     <AssemblyLocation assemblyName="Bonsai.Video" processorArchitecture="MSIL" location="Packages\Bonsai.Video.2.4.0\lib\net462\Bonsai.Video.dll" />
     <AssemblyLocation assemblyName="Bonsai.Video.Design" processorArchitecture="MSIL" location="Packages\Bonsai.Video.Design.2.4.0\lib\net462\Bonsai.Video.Design.dll" />
     <AssemblyLocation assemblyName="Bonsai.Vision" processorArchitecture="MSIL" location="Packages\Bonsai.Vision.2.7.0\lib\net462\Bonsai.Vision.dll" />
@@ -148,6 +152,7 @@
     <AssemblyLocation assemblyName="System.Reactive.Interfaces" processorArchitecture="MSIL" location="Packages\Rx-Interfaces.2.2.5\lib\net45\System.Reactive.Interfaces.dll" />
     <AssemblyLocation assemblyName="System.Reactive.Linq" processorArchitecture="MSIL" location="Packages\Rx-Linq.2.2.5\lib\net45\System.Reactive.Linq.dll" />
     <AssemblyLocation assemblyName="System.Reactive.PlatformServices" processorArchitecture="MSIL" location="Packages\Rx-PlatformServices.2.2.5\lib\net45\System.Reactive.PlatformServices.dll" />
+    <AssemblyLocation assemblyName="uEyeDotNet" processorArchitecture="MSIL" location="Packages\Bonsai.uEye.2.1.1\lib\net45\uEyeDotNet.dll" />
     <AssemblyLocation assemblyName="YamlDotNet" processorArchitecture="MSIL" location="Packages\YamlDotNet.12.0.2\lib\net47\YamlDotNet.dll" />
     <AssemblyLocation assemblyName="ZedGraph" processorArchitecture="MSIL" location="Packages\ZedGraph.5.1.7\lib\net35-Client\ZedGraph.dll" />
   </AssemblyLocations>
