--- a/VrArena/workflows/Extensions.csproj
+++ b/VrArena/workflows/Extensions.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Bonsai.Core" Version="2.7.1" />
+    <PackageReference Include="OpenCV.Net" Version="3.4.1" />
   </ItemGroup>
 
 </Project>
