VR Arena Physical Implementation Start
- Added Cam1and Cam2 Functionality
- Started Introducing the Arduino

--- a/VrArena/bonsai/Bonsai.config
+++ b/VrArena/bonsai/Bonsai.config
@@ -6,6 +6,7 @@
     <Package id="AForge.Video.DirectShow" version="2.2.5" />
     <Package id="AssimpNet" version="4.1.0" />
     <Package id="Bonsai" version="2.7.2" />
+    <Package id="Bonsai.Arduino" version="2.6.0" />
     <Package id="Bonsai.Core" version="2.7.1" />
     <Package id="Bonsai.Design" version="2.7.0" />
     <Package id="Bonsai.Design.Visualizers" version="2.7.0" />
@@ -58,6 +59,7 @@
   </Packages>
   <AssemblyReferences>
     <AssemblyReference assemblyName="Bonsai" />
+    <AssemblyReference assemblyName="Bonsai.Arduino" />
     <AssemblyReference assemblyName="Bonsai.Core" />
     <AssemblyReference assemblyName="Bonsai.Design" />
     <AssemblyReference assemblyName="Bonsai.Design.Visualizers" />
@@ -98,6 +100,7 @@
     <AssemblyLocation assemblyName="AForge.Video.DirectShow" processorArchitecture="MSIL" location="Packages\AForge.Video.DirectShow.2.2.5\lib\AForge.Video.DirectShow.dll" />
     <AssemblyLocation assemblyName="AssimpNet" processorArchitecture="MSIL" location="Packages\AssimpNet.4.1.0\lib\net40\AssimpNet.dll" />
     <AssemblyLocation assemblyName="Bonsai" processorArchitecture="MSIL" location="Packages\Bonsai.2.7.2\lib\net472\Bonsai.exe" />
+    <AssemblyLocation assemblyName="Bonsai.Arduino" processorArchitecture="MSIL" location="Packages\Bonsai.Arduino.2.6.0\lib\net462\Bonsai.Arduino.dll" />
     <AssemblyLocation assemblyName="Bonsai.Core" processorArchitecture="MSIL" location="Packages\Bonsai.Core.2.7.1\lib\net462\Bonsai.Core.dll" />
     <AssemblyLocation assemblyName="Bonsai.Design" processorArchitecture="MSIL" location="Packages\Bonsai.Design.2.7.0\lib\net462\Bonsai.Design.dll" />
     <AssemblyLocation assemblyName="Bonsai.Design.Visualizers" processorArchitecture="MSIL" location="Packages\Bonsai.Design.Visualizers.2.7.0\lib\net462\Bonsai.Design.Visualizers.dll" />
