--- a/VrArena/bonsai/Bonsai.config
+++ b/VrArena/bonsai/Bonsai.config
@@ -8,6 +8,8 @@
     <Package id="Bonsai" version="2.7.2" />
     <Package id="Bonsai.Arduino" version="2.6.0" />
     <Package id="Bonsai.Core" version="2.7.1" />
+    <Package id="Bonsai.DeepLabCut" version="0.3.0" />
+    <Package id="Bonsai.DeepLabCut.Design" version="0.3.0" />
     <Package id="Bonsai.Design" version="2.7.0" />
     <Package id="Bonsai.Design.Visualizers" version="2.7.0" />
     <Package id="Bonsai.Dsp" version="2.7.0" />
@@ -54,6 +56,7 @@
     <Package id="Rx-PlatformServices" version="2.2.5" />
     <Package id="SvgNet" version="3.2.0" />
     <Package id="System.Linq.Dynamic" version="1.0.7" />
+    <Package id="TensorFlowSharp-Lite" version="2.8.0" />
     <Package id="YamlDotNet" version="12.0.2" />
     <Package id="ZedGraph" version="5.1.7" />
   </Packages>
@@ -61,6 +64,8 @@
     <AssemblyReference assemblyName="Bonsai" />
     <AssemblyReference assemblyName="Bonsai.Arduino" />
     <AssemblyReference assemblyName="Bonsai.Core" />
+    <AssemblyReference assemblyName="Bonsai.DeepLabCut" />
+    <AssemblyReference assemblyName="Bonsai.DeepLabCut.Design" />
     <AssemblyReference assemblyName="Bonsai.Design" />
     <AssemblyReference assemblyName="Bonsai.Design.Visualizers" />
     <AssemblyReference assemblyName="Bonsai.Dsp" />
@@ -102,6 +107,8 @@
     <AssemblyLocation assemblyName="Bonsai" processorArchitecture="MSIL" location="Packages\Bonsai.2.7.2\lib\net472\Bonsai.exe" />
     <AssemblyLocation assemblyName="Bonsai.Arduino" processorArchitecture="MSIL" location="Packages\Bonsai.Arduino.2.6.0\lib\net462\Bonsai.Arduino.dll" />
     <AssemblyLocation assemblyName="Bonsai.Core" processorArchitecture="MSIL" location="Packages\Bonsai.Core.2.7.1\lib\net462\Bonsai.Core.dll" />
+    <AssemblyLocation assemblyName="Bonsai.DeepLabCut" processorArchitecture="MSIL" location="Packages\Bonsai.DeepLabCut.0.3.0\lib\net472\Bonsai.DeepLabCut.dll" />
+    <AssemblyLocation assemblyName="Bonsai.DeepLabCut.Design" processorArchitecture="MSIL" location="Packages\Bonsai.DeepLabCut.Design.0.3.0\lib\net472\Bonsai.DeepLabCut.Design.dll" />
     <AssemblyLocation assemblyName="Bonsai.Design" processorArchitecture="MSIL" location="Packages\Bonsai.Design.2.7.0\lib\net462\Bonsai.Design.dll" />
     <AssemblyLocation assemblyName="Bonsai.Design.Visualizers" processorArchitecture="MSIL" location="Packages\Bonsai.Design.Visualizers.2.7.0\lib\net462\Bonsai.Design.Visualizers.dll" />
     <AssemblyLocation assemblyName="Bonsai.Dsp" processorArchitecture="MSIL" location="Packages\Bonsai.Dsp.2.7.0\lib\net462\Bonsai.Dsp.dll" />
@@ -155,6 +162,7 @@
     <AssemblyLocation assemblyName="System.Reactive.Interfaces" processorArchitecture="MSIL" location="Packages\Rx-Interfaces.2.2.5\lib\net45\System.Reactive.Interfaces.dll" />
     <AssemblyLocation assemblyName="System.Reactive.Linq" processorArchitecture="MSIL" location="Packages\Rx-Linq.2.2.5\lib\net45\System.Reactive.Linq.dll" />
     <AssemblyLocation assemblyName="System.Reactive.PlatformServices" processorArchitecture="MSIL" location="Packages\Rx-PlatformServices.2.2.5\lib\net45\System.Reactive.PlatformServices.dll" />
+    <AssemblyLocation assemblyName="TensorFlowSharp" processorArchitecture="MSIL" location="Packages\TensorFlowSharp-Lite.2.8.0\lib\net472\TensorFlowSharp.dll" />
     <AssemblyLocation assemblyName="uEyeDotNet" processorArchitecture="MSIL" location="Packages\Bonsai.uEye.2.1.1\lib\net45\uEyeDotNet.dll" />
     <AssemblyLocation assemblyName="YamlDotNet" processorArchitecture="MSIL" location="Packages\YamlDotNet.12.0.2\lib\net47\YamlDotNet.dll" />
     <AssemblyLocation assemblyName="ZedGraph" processorArchitecture="MSIL" location="Packages\ZedGraph.5.1.7\lib\net35-Client\ZedGraph.dll" />
